fix: dark mode enhancements, modal icon, console errors

--- a/src/globals.css
+++ b/src/globals.css
@@ -4,7 +4,7 @@
 
 @media (prefers-color-scheme: dark) {
   body{
-    @apply bg-gray-900 text-neutral;
+    @apply bg-gray-900 text-neutral-300;
   }
 }
 @media (prefers-color-scheme: light) {
